[package]
name = "rflow"
version = "0.0.4"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "Text protocol for embedded apps"
repository = "https://github.com/roboplc/rflow"
keywords = ["realtime", "robots", "chat", "interface", "control"]
readme = "README.md"

[dependencies]
once_cell = "1.19.0"
rtsc = "0.2"
thiserror = "1.0.61"
tracing = "0.1.40"
