[package]
name = "rflow"
version = "0.1.0"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "Text protocol for embedded apps"
repository = "https://github.com/roboplc/rflow"
keywords = ["realtime", "robots", "chat", "interface", "control"]
readme = "README.md"

[dependencies]
once_cell = "1.19.0"
rtsc = "0.3"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["net", "io-util", "time", "rt", "sync"], optional = true }
tracing = "0.1.40"
parking_lot = { version = "0.12.3", optional = true }
parking_lot_rt = { version = "0.12.1", optional = true }

[features]
async = ["tokio", "dep:parking_lot_rt"]
full = ["async"]

locking-default = ["dep:parking_lot", "rtsc/parking_lot"]
locking-rt = ["dep:parking_lot_rt"]
locking-rt-safe = []

default = ["locking-default"]
