[package]
name = "rflow-chat"
version = "0.0.5"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "Text protocol for embedded apps"
repository = "https://github.com/roboplc/rflow"
keywords = ["realtime", "robots", "chat", "interface", "control"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
cursive = "0.20.0"
rflow = { path = ".." }

[profile.release]
strip = true
