[package]
name = "rflow-chat"
version = "0.0.7"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "Text protocol for embedded apps"
repository = "https://github.com/roboplc/rflow"
keywords = ["realtime", "robots", "chat", "interface", "control"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
cursive = "0.21.1"
rflow = { version = "0.0.7" }

[profile.release]
strip = true
